# mini-drop

./: .gitignore  Makefile  README.md  docker-compose.yml
analysis/: Dockerfile  analysis_advisor.py  analysis_daemon.py  bpf_analyzer.py  collapsed_data_parser.py  config.ini.example  error.py  flamegraph.py  hotmethod_analyzer.py  hotmethod_common.py  memleak_analyzer.py  requirements.txt  rules.yaml  storage.py  test_analysis.py
analysis/data_parser/: __init__.py
apiserver/: Dockerfile  apiserver.yaml  go.mod  go.sum  main.go  test_w2.sh  test_w3.sh  test_w4.sh  test_w5.sh
apiserver/config/: config.go  config_test.go
apiserver/middleware/: middleware.go  middleware_test.go
apiserver/model/: model.go  model_test.go
apiserver/pkg/storage/: minio.go  minio_test.go  storage.go
apiserver/proto/common/: common.pb.go
apiserver/proto/control/: control.pb.go  control_grpc.pb.go
apiserver/proto/healthcheck/: healthcheck.pb.go  healthcheck_grpc.pb.go
apiserver/proto/hotmethod/: hotmethod.pb.go  hotmethod_grpc.pb.go
apiserver/proto/initpb/: init.pb.go  init_grpc.pb.go
apiserver/server/: agent.go  audit.go  auth.go  group.go  schedule.go  server.go  task.go
apiserver/util/: util.go  util_test.go
docs/: design.md
drop/: .dockerignore  CMakeLists.txt  Dockerfile
drop/agent/: Config.cpp  Config.h  main.cpp
drop/common/: AsyncProfilerProfiler.cpp  AsyncProfilerProfiler.h  BpfProfiler.cpp  BpfProfiler.h  COSClient.cpp  COSClient.h  Perf.cpp  Perf.h  PprofProfiler.cpp  PprofProfiler.h  Process.cpp  Process.h  Utils.cpp  Utils.h
drop/common/proto/: common.proto  control.proto  healthcheck.proto  hotmethod.proto  init.proto
drop/etc/: agent_config.json
drop/server/: AgentInfo.cpp  AgentInfo.h  ControlService.cpp  ControlService.h  HealthCheckService.cpp  HealthCheckService.h  HotmethodService.cpp  HotmethodService.h  InitAgentInfoService.cpp  InitAgentInfoService.h  TaskQueue.cpp  TaskQueue.h  main.cpp
drop/tools/: mock_perf  test_w3.py  test_w4.py  test_w5.py
drop/tools/py_gen/common/proto/: common_pb2.py  common_pb2_grpc.py  control_pb2.py  control_pb2_grpc.py  healthcheck_pb2.py  healthcheck_pb2_grpc.py  hotmethod_pb2.py  hotmethod_pb2_grpc.py  init_pb2.py  init_pb2_grpc.py
scripts/: e2e_smoke.sh
web_frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
web_frontend/public/: config.js  index.html
web_frontend/src/: App.js  index.js
web_frontend/src/api/: client.js  index.js
web_frontend/src/components/: CreateTaskModal.js  ErrorBoundary.js  Pagination.js
web_frontend/src/pages/: HomePage.js  LoginPage.js  TaskListPage.js  TaskResultPage.js  TimelinePage.js
